# hhh

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_HH_AUTH.md  README_START.md  README_TELEGRAM.md  alembic.ini  hhh.sh  pyproject.toml  test_hh_areas.py  test_hh_categories.py  test_hh_roles.py
.opencode/: agents.md  cloud_strategy.md  migration_strategy.md  phases.md  plan.md  skills.md
config/: config.yaml  responses.yaml  search_criteria.yaml
drilling_architecture/: 01_system_context.md  02_container_architecture.md  03_component_architecture.md  04_hh_scanner_to_telegram_flow.md  05_aiogram_framework.md  README.md
migrations/: env.py
migrations/versions/: bb79fe3cf224_initial_database_schema.py
src/bot/: main.py
src/bot/handlers/: __init__.py  callbacks.py  commands.py
src/bot/keyboards/: inline.py
src/core/: __init__.py  config.py  database.py  scheduler.py
src/models/: __init__.py  database.py
src/services/: hh_monitor.py  job_processor.py
src/utils/: __init__.py  formatters.py  helpers.py  logger.py
